Prevent icon from shrinking on small viewports

--- a/source/components/banner.scss
+++ b/source/components/banner.scss
@@ -33,6 +33,7 @@
   }
 
   &-icon {
+    flex-shrink: 0;
     margin-top: $space-small-e;
     margin-bottom: $space-small-e;
   }
